Add session management

--- a/dev-docs.org
+++ b/dev-docs.org
@@ -30,14 +30,16 @@ cargo clippy
 cargo fmt
 #+end_src
 * Docker
-** Recompile shell file
+** Recompile shell files (database and redis)
 #+begin_src zsh
 chmod +x scripts/init_db.sh
+chmod +x scripts/init_redis.sh
 #+end_src
 
-** Launch Postgres server
+** Launch Postgres and Redis containers
 #+begin_src shell
 ./scripts/init_db.sh
+./scripts/init_redis.sh
 #+end_src
 
 #+RESULTS:
